--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.php" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    { "src": "/(.*)", "dest": "/api/index.php" }
   ]
 }
